<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="horizontal" >
"

    <Button
        android:id="@id/btnlight1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light1open" />

    <Button
        android:id="@id/btnlight2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light2open" />

    <Button
        android:id="@id/btnlight3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light3open" />

    <Button
        android:id="@id/btnlight4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light4open" />

</LinearLayout>