<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/top_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    android:orientation="horizontal" >

    <ImageButton
        android:id="@id/btnForward"
        android:layout_width="80.0dip"
        android:layout_height="80.0dip"
        android:layout_gravity="left"
        android:background="@drawable/up" />

    <LinearLayout
        android:layout_width="100.0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1.0"
        android:gravity="center"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@id/chkGears"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gears"
          
            android:textColor="#ff0000" />

        <CheckBox
            android:id="@id/chkSensor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensor"
            android:textColor="#ff0000" />

        <CheckBox
            android:id="@+id/chkPwm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
               android:visibility="gone"
            android:text="@string/pwm"
            android:textColor="#ff0000" />
        <CheckBox
            android:id="@+id/chkParam" 
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/param"
            android:textColor="#ff0000" />
    </LinearLayout>

</LinearLayout>