<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="true"
        android:scrollbars="horizontal|vertical" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/backgroupcontrol"
            android:gravity="center" >

            <TableRow android:layout_marginRight="10.0dip" >

                <TextView
                    android:id="@id/textViewup"
                    android:layout_width="40.0px"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/forward" />

                <EditText
                    android:id="@id/editUp"
                    android:layout_width="120.0px"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textViewup"
                    android:layout_weight="1.0"
                    android:text="FF000100FF" />

                <TextView
                    android:id="@id/textViewdown"
                    android:layout_width="60.0px"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/backward" />

                <EditText
                    android:id="@id/editDown"
                    android:layout_width="220.0px"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textViewdown"
                    android:layout_weight="1.0"
                    android:text="FF000200FF" />
            </TableRow>

            <TableRow android:layout_marginRight="10.0dip" >

                <TextView
                    android:id="@id/textViewleft"
                    android:layout_width="40.0px"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/leftward" />

                <EditText
                    android:id="@id/editLeft"
                    android:layout_width="220.0px"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textViewleft"
                    android:layout_weight="1.0"
                    android:text="FF000300FF" />

                <TextView
                    android:id="@id/textViewright"
                    android:layout_width="60.0px"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/rightward" />

                <EditText
                    android:id="@id/editRight"
                    android:layout_width="220.0px"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textViewright"
                    android:layout_weight="1.0"
                    android:text="FF000400FF" />
            </TableRow>

            <TableRow android:layout_marginRight="10.0dip" >

                <TextView
                    android:id="@id/textViewstop"
                    android:layout_width="40.0px"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/stop" />

                <EditText
                    android:id="@id/editStop"
                    android:layout_width="220.0px"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textViewstop"
                    android:layout_weight="1.0"
                    android:text="FF000000FF" />

                <TextView
                    android:id="@id/textControlPort"
                    android:layout_width="120.0px"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/port" />

                <EditText
                    android:id="@id/editControlPort"
                    android:layout_width="220.0px"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textControlPort"
                    android:layout_weight="1.0"
                    android:inputType="number"
                    android:text="2001" />
            </TableRow>

            <TableRow android:layout_marginRight="10.0dip" >

                <TextView
                    android:id="@id/textControlIP"
                    android:layout_width="60.0px"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/controlurl" />

                <EditText
                    android:id="@id/editControlIP"
                    android:layout_width="220.0px"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textControlIP"
                    android:layout_weight="1.0"
                    android:text="192.168.1.1" />

                <TextView
                    android:id="@id/textDisplayMode"
                    android:layout_width="60.0px"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/displaymode"
                    android:visibility="invisible" />

                <Spinner
                    android:id="@id/spinnerDisplayMode"
                    android:layout_width="220.0px"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textDisplayMode"
                    android:layout_weight="1.0"
                    android:visibility="invisible" />
            </TableRow>

            <TableRow android:layout_marginRight="10.0dip" >

                <TextView
                    android:id="@id/textVideoIP"
                    android:layout_width="100.0px"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/videourl" />

                <EditText
                    android:id="@id/editVideoIP"
                    android:layout_width="620.0px"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:layout_toRightOf="@id/textVideoIP"
                    android:layout_weight="1.0"
                    android:text="http://192.168.1.1:8080/?action=stream" />
            </TableRow>

            <TableRow
                android:layout_marginRight="10.0dip"
                android:visibility="invisible" >

                <TextView
                    android:id="@id/textScreenGear"
                    android:layout_width="100.0px"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/sreen_gear" />

                <CheckBox
                    android:id="@id/chkScreenGear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/textScreenGear"
                    android:layout_weight="1.0" />
            </TableRow>

            <TableRow android:gravity="center" >

                <Button
                    android:id="@id/btnControlOK"
                    android:layout_width="80.0sp"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:text="@string/confirm" />

                <Button
                    android:id="@id/btnControlCancel"
                    android:layout_width="40.0sp"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:layout_toRightOf="@id/btnControlOK"
                    android:text="@string/cancel" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</LinearLayout>