<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/pic_main" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" >

            <TextView
                android:id="@id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/appname"
                android:textColor="#FF0000"
                android:textSize="28.0dip"
                android:textStyle="bold" />

            <TextView
                android:id="@id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView1"
                android:layout_centerHorizontal="true"
                android:text="@string/auther"
                android:textColor="#FF0000"
                android:textSize="25.0dip"
                android:textStyle="bold" />

            <TextView
                android:id="@id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="22.0dip"
                android:layout_marginRight="5.0dip"
                android:text="@string/website"
                android:textColor="#FFFFFF"
                android:textSize="20.0dip" />

            <ImageButton
                android:id="@id/btnConfig"
                android:layout_width="120.0dip"
                android:layout_height="120.0dip"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/textView2"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15.0dip"
                android:layout_toRightOf="@id/btnStart"
                android:background="@drawable/pic_setting" />

            <ImageButton
                android:id="@id/btnStart"
                android:layout_width="120.0dip"
                android:layout_height="120.0dip"
                android:layout_alignRight="@id/textView3"
                android:layout_centerVertical="true"
                android:background="@drawable/pic_start" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>